--- a/sample-projects/1-one-page-website/index.html
+++ b/sample-projects/1-one-page-website/index.html
@@ -8,14 +8,12 @@
  
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
-    
-    <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
   </head>  
   <body>
     <h1>Hi there!</h1>
-    <p>
-      I'm your cool new webpage.
-    </p>
+    <img src="images/cat.jpg">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque magna est, ullamcorper quis purus nec, eleifend interdum diam. Morbi ut tortor leo. Aliquam eu erat id diam vestibulum viverra in dignissim velit. Etiam nec iaculis nisl, at ultrices justo. Quisque maximus auctor sapien a eleifend. Praesent lectus ligula, molestie et leo luctus, hendrerit vestibulum ante. Morbi vehicula, massa in rhoncus iaculis, nisl magna fermentum ante, a facilisis orci ex non purus. Donec at vestibulum felis, vitae molestie purus. Nullam blandit et arcu fringilla iaculis. Cras lacus dui, accumsan quis nunc ac, congue egestas purus. Fusce consequat ex bibendum orci sodales, non vulputate leo tristique. Mauris mattis a neque vitae ultricies. Vivamus nec tempus ante. Vestibulum eu leo egestas, ultrices mauris vel, iaculis augue.</p>
+
+    <p>Sed commodo felis sagittis, pulvinar massa et, posuere mauris. Proin euismod in dui non malesuada. Integer scelerisque in nibh at rhoncus. Ut facilisis orci et ipsum auctor tincidunt. Nunc eget massa tincidunt, molestie quam a, suscipit arcu. Proin semper dictum lorem vel tincidunt. In laoreet ligula et nunc maximus congue. Mauris vestibulum mi id vestibulum rutrum. Pellentesque fringilla varius lectus et dictum. Sed molestie sit amet justo quis ultrices. Quisque consequat neque arcu, sit amet dignissim sapien pharetra sed. Donec et urna vel mauris facilisis tempus. Ut eu risus interdum, bibendum nulla eget, tristique enim.</p>
   </body>
 </html>
