--- a/sample-projects/1-one-page-website/index.html
+++ b/sample-projects/1-one-page-website/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/style.css">
   </head>  
   <body>
-    <h1>Hi there!</h1>
+    <h1>Hi there! My name is Cat</h1>
     <img src="images/cat.jpg">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque magna est, ullamcorper quis purus nec, eleifend interdum diam. Morbi ut tortor leo. Aliquam eu erat id diam vestibulum viverra in dignissim velit. Etiam nec iaculis nisl, at ultrices justo. Quisque maximus auctor sapien a eleifend. Praesent lectus ligula, molestie et leo luctus, hendrerit vestibulum ante. Morbi vehicula, massa in rhoncus iaculis, nisl magna fermentum ante, a facilisis orci ex non purus. Donec at vestibulum felis, vitae molestie purus. Nullam blandit et arcu fringilla iaculis. Cras lacus dui, accumsan quis nunc ac, congue egestas purus. Fusce consequat ex bibendum orci sodales, non vulputate leo tristique. Mauris mattis a neque vitae ultricies. Vivamus nec tempus ante. Vestibulum eu leo egestas, ultrices mauris vel, iaculis augue.</p>
 
