--- a/sample-projects/1-one-page-website/index.html
+++ b/sample-projects/1-one-page-website/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>  
   <body>
     <h1>Hi there! My name is Cat</h1>
