Adding resources + intro to nodejs

--- a/sample-projects/9-web-speech-api/index.html
+++ b/sample-projects/9-web-speech-api/index.html
@@ -8,8 +8,17 @@
 </head>
 <body>
   <h2>Web Speech API Demo</h2>
+
   <p>Allow the mic and start speaking! Just say which link you want to go to. (Like "home").</p>
   <p>You need a little patience as the info has to be relayed to a server... Only works in Chrome</p>
+
+  <nav>
+    <a href="#" data-word="home">Home</a>
+    <a href="about-me" data-word="about">About</a>
+    <a href="portfolio" data-word="work">Work</a>
+    <a href="contact" data-word="contact">Contact</a>
+  </nav>
+
   <p>Latest word the API thinks you just said: <strong id="latest-word"></strong></p>
 </body>
 <script src="js/index.js"></script>
