--- a/examples/racetrack/index.html
+++ b/examples/racetrack/index.html
@@ -10,6 +10,6 @@
     <script src="racetrack.js" defer></script>
   </head>
   <body>
-    <img src="assets/car.png" id="car" class="car">
+    <img src="assets/car.png" id="car">
   </body>
 </html>
