--- a/javascript/exercises/index.html
+++ b/javascript/exercises/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>JS Exercises</title>
+<html lang="en">
+  <head>
+    <title>JS Exercises</title>
+    <script src="arithmetic.js"></script>
+    <script src="types.js"></script>
+    <script src="conditional.js"></script>
+    <script src="arrays.js"></script>
+  </head>
 
-<script src="arithmetic.js"></script>
-<script src="types.js"></script>
-</head>
-
-<body>
-Right click on this page > click Inspect > click on the Console tab to see your code!
-</body>
-
+  <body>
+    Right click on this page &gt; click Inspect &gt; click on the Console tab to
+    see your code!
+  </body>
 </html>
